/*
 * @begin:license
 *
 * Copyright (c) 2015-2018, Benjamin Niemann <pink@odahoda.de>
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License along
 * with this program; if not, write to the Free Software Foundation, Inc.,
 * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 *
 * @end:license
 */

syntax = "proto2";

import "noisicaa/audioproc/public/musical_time.proto";
import "noisicaa/model/project.proto";

package noisicaa.pb;

message Note {
  repeated Pitch pitches = 1;
  optional MusicalDuration base_duration = 2;
  optional uint32 dots = 3;
  optional uint32 tuplet = 4;
}

message ScoreMeasure {
  optional Clef clef = 1;
  optional KeySignature key_signature = 2;
  repeated uint64 notes = 3;
}

message ScoreTrack {
  optional int32 transpose_octaves = 1;
}

